--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ pilot: false
 # Most workshops don't use extra pages. More information about extra
 # pages are included in the README:
 # https://github.com/carpentries/workshop-template#creating-extra-pages
-title: "Working with Digital Data for scholars in the Humanities"
+title: "Working with Digital Data in the Humanities"
 
 #------------------------------------------------------------
 # Incubator workshop settings (only relevant for workshops teaching a lesson
